# scrapy-mysql-pipeline

./: .gitignore  LICENSE  README.md  environment.yml  meta.yaml  requirements_dev.txt  setup.cfg  setup.py
scrapy_mysql_pipeline/: __init__.py  pipeline.py
