[metadata]
name = scrapy-mysql-pipeline
author = Iaroslav Russkykh
author-email = iarruss@ya.ru
summary = Asynchronous mysql Scrapy item pipeline
license = MIT
description-file = README.rst
home-page = https://github.com/IaroslavR/scrapy-mysql-pipeline
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Framework :: Scrapy
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    scrapy_mysql_pipeline

[wheel]
universal = 1

